<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="api_key" translatable="false">5c40fca8dbce44d1d1098a8a024a633e</string>


    <!-- Example General settings -->
    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key" translatable="false">Sort_Type</string>
    <string name="pref_sort_default" translatable="false">popular</string>


    <string-array name="pref_sort_values">
        <item>popular</item>
        <item>top_rated</item>
    </string-array>
    <string-array name="pref_units_options">
        <item>Most Popular</item>
        <item>Top Rated</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Drawer of navigationview -->
    <string name="nav_home">Home</string>
    <string name="nav_most_popular">Most Popular</string>
    <string name="nav_top_rated">Top Rated</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_setting">Setting</string>
</resources>
